fix: stats